--- a/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig
@@ -318,7 +318,7 @@
 
   <{{ buttonTag }} {{ block('button_attributes') }}>
     <i class="material-icons">{{ button_icon }}</i>
-    {{ label }}
+    <span class="btn-label">{{ label }}</span>
   </{{ buttonTag }}>
 {%- endblock %}
 
