fix alias namings

--- a/src/PrestaShopBundle/Resources/views/Admin/Configure/ShopParameters/Search/index.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Configure/ShopParameters/Search/index.html.twig
@@ -26,7 +26,7 @@
 
 {% block content %}
   {% block stores_listing %}
-    {% include '@PrestaShop/Admin/Common/Grid/grid_panel.html.twig' with {'grid': searchAliasesGrid} %}
+    {% include '@PrestaShop/Admin/Common/Grid/grid_panel.html.twig' with {'grid': aliasGrid} %}
   {% endblock %}
 {% endblock %}
 
