--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/paginated_list_header.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/paginated_list_header.html.twig
@@ -123,6 +123,7 @@
        'modal.cancel': 'Cancel'|trans({}, 'Admin.Actions'),
        'modal.confirm': 'Discard'|trans({}, 'Admin.Actions'),
        'modal.history.empty': 'Here, you can have a look at the combinations you have edited. The list will reset when you close the editing window.'|trans({}, 'Admin.Catalog.Feature'),
-
+       'modal.history.open': 'Open history'|trans({}, 'Admin.Catalog.Feature'),
+       'modal.history.close': 'Close history'|trans({}, 'Admin.Catalog.Feature'),
      }|json_encode }}"
 ></div>
