--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/combination.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/combination.html.twig
@@ -61,7 +61,7 @@
          }|json_encode }}"
     ></div>
 
-    {{ render(controller('PrestaShopBundle\\Controller\\Admin\\Sell\\Catalog\\Product\\Combination:paginatedList', {
+    {{ render(controller('PrestaShopBundle\\Controller\\Admin\\Sell\\Catalog\\Product\\CombinationController:paginatedListAction', {
       'productId': productId,
     })) }}
   </div>
