Code review changes

--- a/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig
@@ -1610,3 +1610,57 @@
     {% endfor -%}
   </div>
 {%- endblock -%}
+
+{% block image_with_preview_widget %}
+  {% if data is defined and data is not empty %}
+    <div>
+      {% for preview_image in data %}
+{#        Checking for is defined because they file might come from submitted form when thera are too many thumbnails and an errro#}
+{#        in that case data will be a file based on symfony and not a image array formatted for this form#}
+        {% if preview_image.image_path is defined %}
+          {% if can_be_deleted %}
+            <figure class="figure">
+              <img src="{{ preview_image.image_path }}" class="figure-img img-fluid img-thumbnail">
+              <figcaption class="figure-caption">
+                {% if show_size %}
+                  <p>{{ 'File size'|trans({}, 'Admin.Advparameters.Feature') }} {{ preview_image.size }}</p>
+                {% endif %}
+                <button class="btn btn-outline-danger btn-sm js-form-submit-btn"
+                        data-form-submit-url="{{ preview_image.delete_path }}"
+                        data-form-csrf-token="{{ csrf_token(csrf_delete_token_id) }}"
+                >
+                  <i class="material-icons">
+                    delete_forever
+                  </i>
+                  {{ 'Delete'|trans({}, 'Admin.Actions') }}
+                </button>
+              </figcaption>
+            </figure>
+          {% else %}
+            {% for preview_image in data %}
+              <figure class="figure">
+                <img src="{{ preview_image.image_path }}" class="figure-img img-fluid img-thumbnail">
+                {% if show_size %}
+                  <figcaption class="figure-caption">{{ 'File size'|trans({}, 'Admin.Advparameters.Feature') }} {{ preview_image.size }}</figcaption>
+                {% endif %}
+              </figure>
+            {% endfor %}
+          {% endif %}
+      {% endif %}
+      {% endfor %}
+    </div>
+  {% endif %}
+  {% if form.parent.vars.data.disabled_menu_thumbnail_upload is defined and form.parent.vars.data.disabled_menu_thumbnail_upload and warning_message is not null %}
+    <div class="d-none">
+      {{ block('file_widget') }}
+    </div>
+
+    <div class="alert alert-warning" role="alert">
+      <p class="alert-text">
+        {{ warning_message }}
+      </p>
+    </div>
+  {% else %}
+    {{ block('file_widget') }}
+  {% endif %}
+{% endblock image_with_preview_widget %}
