fix css for search dropdown in combination generator

--- a/admin-dev/themes/new-theme/scss/components/_entity_search.scss
+++ b/admin-dev/themes/new-theme/scss/components/_entity_search.scss
@@ -3,6 +3,8 @@ ul.entities-list {
 }
 
 .entity-search-widget {
+  @import '_twitter_typeahead.scss';
+
   .entities-list {
     max-width: 100%;
     padding: 0;
