--- a/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
+++ b/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
@@ -1751,7 +1751,7 @@ $product-page-padding-bottom: 80px !default;
 }
 
 #product_combinations_combination_manager {
-  @import '../../components/twitter_typeahead';
+  @import "../../components/twitter_typeahead";
 
   #combination-list-actions {
     display: flex;
