Changes based code reviews on attribute group

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Attribute/Blocks/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Attribute/Blocks/form.html.twig
@@ -30,7 +30,7 @@
 
   <div class="card">
     <h3 class="card-header">
-      {{ 'Attribute'|trans({}, 'Admin.Catalog.Attribute') }}
+      {{ 'Attribute value'|trans({}, 'Admin.Catalog.Attribute') }}
     </h3>
 
     <div class="card-body">
