--- a/src/PrestaShopBundle/Resources/views/Admin/WebProfiler/config.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/WebProfiler/config.html.twig
@@ -101,7 +101,7 @@
                 <b>Resources</b>
                 <span>
                     {% set appVersion = collector.applicationversion|join()[:1] %}
-                    <a href="https://devdocs.prestashop.com/{{ appVersion }}/" rel="help">
+                    <a href="https://devdocs.prestashop-project.org/{{ appVersion }}/" rel="help">
                         Read PrestaShop {{ collector.applicationversion }} Docs
                     </a>
                 </span>
@@ -225,7 +225,7 @@
           <b>Resources</b>
           <span>
             {% set appVersion = collector.applicationversion|join()[:1] %}
-              <a href="https://devdocs.prestashop.com/{{ appVersion }}/" rel="help">
+              <a href="https://devdocs.prestashop-project.org/{{ appVersion }}/" rel="help">
                   Read PrestaShop {{ collector.applicationversion }} Docs
               </a>
           </span>
